@@ -1,5 +1,6 @@
 package org.athletes.traineatrepeat.service;
 
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.athletes.traineatrepeat.converter.ExerciseConverter;
 import org.athletes.traineatrepeat.model.request.ExerciseRequest;
@@ -8,52 +9,42 @@ import org.athletes.traineatrepeat.repository.ExerciseRepository;
 import org.athletes.traineatrepeat.repository.dto.ExerciseDTO;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 public class ExerciseService {
 
-    private final ExerciseRepository exerciseRepository;
-    private final ExerciseConverter exerciseConverter;
+  private final ExerciseRepository exerciseRepository;
+  private final ExerciseConverter exerciseConverter;
 
-    public ExerciseResponse createExercise(ExerciseRequest request) {
-        ExerciseDTO exerciseToSave = ExerciseDTO.builder()
-                .name(request.name())
-                .MET(request.MET())
-                .build();
-        ExerciseDTO savedExercise = exerciseRepository.save(exerciseToSave);
-        return exerciseConverter.toResponseFromEntity(savedExercise);
-    }
+  public ExerciseResponse createExercise(ExerciseRequest request) {
+    ExerciseDTO exerciseToSave =
+        ExerciseDTO.builder().name(request.name()).MET(request.met()).build();
+    ExerciseDTO savedExercise = exerciseRepository.save(exerciseToSave);
+    return exerciseConverter.toResponseFromEntity(savedExercise);
+  }
 
-    public List<ExerciseResponse> getAllExercises() {
-        List<ExerciseDTO> exercises = exerciseRepository.findAll();
-        return exercises.stream()
-                .map(exerciseConverter::toResponseFromEntity)
-                .collect(Collectors.toList());
-    }
+  public List<ExerciseResponse> getAllExercises() {
+    List<ExerciseDTO> exercises = exerciseRepository.findAll();
+    return exercises.stream().map(exerciseConverter::toResponseFromEntity).toList();
+  }
 
-    public ExerciseResponse getExerciseById(String id) {
-        return exerciseRepository.findById(id)
-                .map(exerciseConverter::toResponseFromEntity)
-                .orElseThrow(() -> new RuntimeException("Exercise not found with ID: " + id));
-    }
+  public ExerciseDTO getExerciseById(String id) {
+    return exerciseRepository
+        .findById(id)
+        .orElseThrow(() -> new RuntimeException("Exercise not found with ID: " + id));
+  }
 
-    public ExerciseResponse updateExercise(String id, ExerciseRequest request) {
-        ExerciseDTO existingExercise = exerciseRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Exercise not found with ID: " + id));
+  public ExerciseResponse updateExercise(String id, ExerciseRequest request) {
+    ExerciseDTO existingExercise = getExerciseById(id);
 
-        existingExercise.setName(request.name());
-        existingExercise.setMET(request.MET());
+    existingExercise.setName(request.name());
+    existingExercise.setMET(request.met());
 
-        ExerciseDTO updatedExercise = exerciseRepository.save(existingExercise);
-        return exerciseConverter.toResponseFromEntity(updatedExercise);
-    }
+    ExerciseDTO updatedExercise = exerciseRepository.save(existingExercise);
+    return exerciseConverter.toResponseFromEntity(updatedExercise);
+  }
 
-    public void deleteExercise(String id) {
-        exerciseRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Exercise not found with ID: " + id));
-        exerciseRepository.deleteById(id);
-    }
+  public void deleteExercise(String id) {
+    exerciseRepository.deleteById(id);
+  }
 }
